# cprogs

./: .gitignore  README.md  c.sublime-project  c.sublime-workspace  c.sublime-workspace.orig
experiments/: clock  clock.c  dialog  dialog.c
experiments/Auto/: a.out  auto  for.c  for_auto  for_auto.c
experiments/BitFields/: struct_bit  struct_bit.c  struct_bit_free
experiments/Dialog/: CMakeLists.txt  main.c
experiments/GVK_Tree/: Errors.html  Makefile  input.txt  main  main.c  tree.c  tree.h
experiments/IntVarCheck/: check.c  input.c  input.h  test  test.c
experiments/Julia/: Makefile  input.txt  lab_25  lab_25.c
experiments/LowLevelFile/: CMakeLists.txt  main.c
experiments/Percent/: percent  percent.c
experiments/SanyaEbet/: Ex2.c  arrayequasion.c  huunya  logo  main.c  shoulders.c  shoulders.h
experiments/Sin/: sin.c
experiments/array/: a.out  array  array.c  array2  array2.c  array3  array3.c  array4  array4.c  array5  array5.c  array5.s
experiments/asm/: asm1.asm  asm2.asm  asm3.asm  asm4.asm  asm5.asm  c1  c1.c  c2  c2.c  c3  c3.c  c5  c5.c
experiments/joseph/: a1  a1.c
experiments/memPage/: a1  a1.c
experiments/pow/: lpow.s  pow  pow.c
experiments/sign/: sign  sign.c
experiments/vla/: a.out  a1.c
experiments/zero/: a1  a1.c
home/AlinaSudoku/: Header.h  init.c  main.c
home/Max_lab_9/: CMakeLists.txt  main.c
home/NastyaRom/: TwoPower  TwoPower.c
home/Olya/: a2  a2.c
home/PolyaPractice1/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  a1  a15  a2  a3  a6  a8
home/PolyaPractice2/: 1.cpp  10.cpp  2.cpp  4.cpp  6.cpp  7.cpp  8.cpp  a1  a10  a2  a6  a7  a8
home/PolyaPractice3(Calc)/: Calc.cpp  Combinatoric.cpp  Fraction.cpp  Functional.cpp  Header_fraction.h  Jwfunc.cpp  Makefile  Math_probability.cpp  Math_probability.h  Matrix.cpp  PolyaCalc  head_jwfunc.h
home/Project/: @  Answer:  CMakeLists.txt  Makefile  dbg_main  dbg_make.sh  dbg_make_linux.sh  main  main.c  make.sh  make_linux.sh
home/Project/SetsCalc/: AUTHORS  Makefile  Makefile.am  Makefile.in  SetsCalc  config.h  config.status  configure  configure.ac
home/Project/SetsCalc/autom4te.cache/: output.1  requests  traces.0  traces.1
home/Project/SetsCalc/src/: main.c
home/Project/SetsCalc/src/.deps/: main.Po
home/Project/SetsCalc/src/files/: help.txt
home/Project/SetsCalc/src/headers/: project.h
home/Project/SetsCalc/src/libs/: math.c  menu.c  menu2.c  menu3.c  tree.c  tree2.c
home/Project/SetsCalc/src/libs/.deps/: math.Po  menu.Po  menu2.Po  menu3.Po  tree.Po
home/STL/: .gitignore  CMakeLists.txt  STL.h  STL_Config.h  STL_Config.h.in  STL_Config.h.in~  STL_List.c  STL_Stack.c  config.h  config.h.in~  main.c  stamp-h1
home/STL/.deps/: STL_Stack.Plo
home/STL/STL_build/: .gitignore  Makefile.am  configure.ac
home/STL2/src/: CMakeLists.txt  STL.h  main.c
home/STL2/src/STL_List/: STL_List.c  STL_List.h
home/Sorting/: .gitignore  CMakeLists.txt  adv_sorting.c  compare.c  convertions.c  main.c  others.c  sorting.c  sorting.h
home/Sorting/Sorting_build/: Makefile.am  configure.ac
home/THL-1/: CMakeLists.txt  alu.c  alu.h  assembler.py  control.c  control.h  main.c  prog_creator.c  ram.h
lab/: .directory  lab.sublime-workspace
lab/lab_03/: a1  a1.c  a2  a3  a3.c  a31  a31.c  a4a.c  a4b  a4b.c  a4c  a4c.c  a4d  a4e  a4e.c  a4f  a4f.c
lab/lab_04/: a1  a1.c  a2  a2.c  a3  a3.c  a5  a5.c
lab/lab_05/: a1  a2  a2.c  a2.ods  a3
lab/lab_06/: a1.c  a2  a2.c  a3  a3.c  a4  a4.c  a5.c  a6  a6.c
lab/lab_07/: a1  a11  a11.c  a2  a2.c  a3  a3.c  a4  a5  a5.c  a51
lab/lab_08/: a1.c  a2.c
lab/lab_09/: a1  a1.c  a3  a3.sublime-workspace
lab/lab_10/: a1  a2  a2.c  a21  a21.c  a22  a22.c  (+4 more)
lab/lab_dev/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  client.c  fifoclient.c  fifoserver.c  main  main.c  main_2.c  second.c  simple_main.c  test.c
lab/lab_dev/input/: input.c  input.h
lab/lab_dev/libs/: hash_map.c  hash_map.h  libs.c  libs.c.orig  libs.h  process.c  process.h  tree.c  tree.h  visual.c  visual.h
lab/lab_dev/process/: process.c
lab/lab_dev/proj_folder/: source.c  source.h
lab/lab_dev/tree/: tree.c  tree.h
lab/lab_dev/visual/: visual.h
(+469 files in other folders)
